hc::configuration: Fix SSRF typo

--- a/hc/en/configuration.html
+++ b/hc/en/configuration.html
@@ -290,7 +290,7 @@
                       <li><strong>Import EXIF/JPEG image data</strong> [<span class="vartype-bool">boolean</span>]If enabled, existing EXIF/JPEG metadata of images will be parsed and stored in the database for display in the media gallery.</li>
                       <li><strong>Media properties</strong> [<span class="vartype-str">string</span>] Enter a list of “;” separated property fields you want to define for each media file(You can append “:MULTI” after any item to indicate that this item will contain long text instead of just some characters).</li>
                       <li><strong>Media keywords</strong> [<span class="vartype-str">string</span>] Enter a list of “;” separated words that you want to use as pre-defined keywords for media items.</li>
-                      <li><strong>Allow to fetch data from local URLs</strong> [<span class="vartype-bool">boolean</span>] By default, it is forbidden due to security constrains to fetch data from local URLs to prevent Server Side Request Forgers (SSRF). If you use a local intranet, you can enable this option to allow fetching data. Yes/No.</li>
+                      <li><strong>Allow to fetch data from local URLs</strong> [<span class="vartype-bool">boolean</span>] By default, it is forbidden due to security constrains to fetch data from local URLs to prevent Server-Side Request Forgery (SSRF). If you use a local intranet, you can enable this option to allow fetching data. Yes/No.</li>
                     </ul>
                 </div>
             </div>
